fix: :lipstick: fix label alignment

--- a/src/stories/output.css
+++ b/src/stories/output.css
@@ -625,6 +625,14 @@ video {
   top: 1rem;
 }
 
+.right-3 {
+  right: 0.75rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
 .me-3 {
   margin-inline-end: 0.75rem;
 }
